--- a/Client/online-auction/package.json
+++ b/Client/online-auction/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.464.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6"
   },
